# OP-TEE_my_test

./: .gitignore  CMakeLists.txt  Makefile  README.md  my_package.mk
aes_serial/: CMakeLists.txt
aes_serial/host/: Makefile  main.c
aes_serial/ta/: Makefile  aes_serial_ta.c  sub.mk  user_ta_header_defines.h
aes_serial/ta/include/: aes_serial_ta.h
gateway-linux/: CMakeLists.txt  Makefile
gateway-linux/include/: connections_handler.h  data_handler.h  decrypt.h  defines.h
gateway-linux/src/: connections_handler.c  crypto.c  data_handler.c  main.c  serial_package.c
gateway-linux/src/data_structure/: record.c  serie.c
hello_world/host/: Makefile  main.c
hello_world/ta/: Makefile
hello_world/ta/include/: hello_world_ta.h
my_test/: CMakeLists.txt
my_test/host/: Makefile  main.c
my_test/ta/: Makefile  my_test_ta.c  user_ta_header_defines.h
my_test/ta/include/: my_test_ta.h
serial_test/: CMakeLists.txt  Makefile
serial_test/host/: Makefile  main.c
serial_test/ta/: Makefile  serial_test_ta.c  sub.mk  user_ta_header_defines.h
serial_test/ta/include/: serial_test_ta.h
socket-TCP-test-mbedtls/: CMakeLists.txt  Makefile
socket-TCP-test-mbedtls/certs/: _.lisha.ufsc.br.pem.h
socket-TCP-test-mbedtls/libs/libmbedtls/: Makefile
socket-TCP-test-mbedtls/src/: crypto.c  crypto.h  defines.h  main.c  tls_handler.c  tls_handler.h
socket-TCP-test-mbedtls/src/data_structure/: record.c  serie.c
socket_test/host/: Makefile  main.c
socket_test/ta/: socket_test_ta.c  user_ta_header_defines.h
tls_test/: CMakeLists.txt  Makefile
tls_test/host/: Makefile  main.c  my_post.h
tls_test/ta/: .gitignore  Makefile  sub.mk  tls_test_ta.c  user_ta_header_defines.h
tls_test/ta/include/: tls_test_ta.h
tls_test/ta/include_ta/: connections_handler.h  crypto.h  data_handler.h  defines.h  http_handler.h  socket_handler.h  tls_handler.h
tls_test/ta/include_ta/data_structure/: record.h  serie.h
tls_test/ta/include_ta/utils/: double_format_handler.h
tls_test/ta/src/: connections_handler.c  crypto.c  crypto.h  data_handler.c  data_handler.h  defines.h  http_handler.c  http_handler.h  my_post.c  serial_package.c  serial_package.h  socket_handler.c  socket_handler.h  tls_handler.c  tls_handler.h  tls_test_ta.c
tls_test/ta/src/data_structure/: record.c  serie.c
tls_test/ta/src/utils/: double_format_handler.c
x509_test/: CMakeLists.txt
x509_test/host/: Makefile  main.c
x509_test/ta/: Makefile  sub.mk  user_ta_header_defines.h  x509_test_ta.c
x509_test/ta/include/: x509_test_ta.h
